syntax = "proto2";

package jraft;

// Command under Directory finalProject : protoc --java_out=src/main/java src/main/resources/trading.proto

option java_package = "trading.rpc";
option java_outer_classname = "TradingOutter";

message CreateAccountRequest {
  required string accountID = 1;
  optional int32 balance = 2;
}

message SendPaymentRequest {
  required string fromAccountID = 1;
  required string toAccountID = 2;
  required int32 amount = 3;
}

message QueryRequest {
  required string accountID = 1;
}

message ValueResponse {
  required int32 balance = 1; // return the account balance to the request sender
  required bool success = 2;
  optional string redirect = 3;
  optional string errorMsg = 4;
}